# authentication-be

./: Makefile  db.sqlite3  pyproject.toml
account/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/static/js/toastr/: min.js
authSystem/: asgi.py  settings.py  urls.py  wsgi.py
templates/email/: base.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html
